[gd_scene load_steps=6 format=3 uid="uid://player001"]

[ext_resource type="Script" path="res://scripts/player/player_controller.gd" id="1"]
[ext_resource type="Script" path="res://scripts/systems/inventory_system.gd" id="2"]
[ext_resource type="Script" path="res://scripts/systems/game_ui.gd" id="3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.4
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 29
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visible = false
mesh = SubResource("CapsuleMesh_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
current = true
fov = 90.0

[node name="WeaponHolder" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.2, -0.4)

[node name="InteractRay" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 29

[node name="InventorySystem" type="Node" parent="."]
script = ExtResource("2")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 40.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="UI/HUD/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HEALTH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 320.0
offset_bottom = 70.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="UI/HUD/StaminaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "STAMINA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "30 / 120"
horizontal_alignment = 2

[node name="InteractPrompt" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
text = "[E] Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crosshair" type="Control" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="H" type="ColorRect" parent="UI/HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -1.0
offset_right = 10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="V" type="ColorRect" parent="UI/HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -10.0
offset_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="InventoryPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/InventoryPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
text = "INVENTORY"
